--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,15 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Qweez">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+  <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#4357bb">
+  <meta name="apple-mobile-web-app-title" content="Qweez">
+  <meta name="application-name" content="Qweez">
+  <meta name="msapplication-TileColor" content="#4357bb">
+  <meta name="theme-color" content="#4357bb">
 
   <title>Qweez</title>
   <link rel="manifest" href="manifest.json">
